--- a/public/patterns/01-templates-06-loading/01-templates-06-loading.markup-only.html
+++ b/public/patterns/01-templates-06-loading/01-templates-06-loading.markup-only.html
@@ -2764,7 +2764,7 @@
 </head>
 
 <body class="background--blue">
-  <section class="vh--100 text--center">
+  <section class="background--blue vh--100 text--center">
     <div class="col-md-5 background--white p--3 border-radius absolute centered">
       <h2>One moment…</h2>
       <p>
