Reduce line height for headings; remove small from search results CTA

--- a/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
+++ b/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
@@ -696,6 +696,7 @@
     .h5,
     .h6 {
       font-weight: 700;
+      line-height: 1.2;
       margin: 0 0 18px;
     }
 
@@ -5846,7 +5847,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
@@ -5876,7 +5877,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
@@ -5924,7 +5925,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
@@ -5972,7 +5973,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
@@ -6020,7 +6021,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
@@ -6068,7 +6069,7 @@
                 </div>
                 <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                   <span class="search-result--currency"><strong>$100</strong></span>
-                  <span class="[ button button--green ] small">Continue</span>
+                  <span class="[ button button--green ]">Continue</span>
                   <div class="stub stub--top"></div>
                   <div class="stub stub--middle"></div>
                   <div class="stub stub--bottom"></div>
