--- a/public/patterns/01-templates-02-search-results/01-templates-02-search-results.rendered.html
+++ b/public/patterns/01-templates-02-search-results/01-templates-02-search-results.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1507443444859" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1507443444859" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1508044823612" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1508044823612" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1507443444859" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1507443444859" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1508044823612" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1508044823612" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -724,6 +724,7 @@
       .h5,
       .h6 {
         font-weight: 700;
+        line-height: 1.2;
         margin: 0 0 18px;
       }
 
@@ -5874,7 +5875,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -5904,7 +5905,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -5952,7 +5953,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -6000,7 +6001,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -6048,7 +6049,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -6096,7 +6097,7 @@
                   </div>
                   <div class="text--center search-result--price col-xs-12 col-sm-3 col-md-3">
                     <span class="search-result--currency"><strong>$100</strong></span>
-                    <span class="[ button button--green ] small">Continue</span>
+                    <span class="[ button button--green ]">Continue</span>
                     <div class="stub stub--top"></div>
                     <div class="stub stub--middle"></div>
                     <div class="stub stub--bottom"></div>
@@ -6615,10 +6616,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1507443444859">
+  <script id="pl-js-polyfill-insert-1508044823612">
     (function() {
       if (self != top) {
-        var cb = '1507443444859';
+        var cb = '1508044823612';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -6628,10 +6629,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1507443444859">
+  <script id="pl-js-insert-1508044823612">
     (function() {
       if (self != top) {
-        var cb = '1507443444859';
+        var cb = '1508044823612';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
