--- a/public/patterns/01-templates-08-contact/01-templates-08-contact.rendered.html
+++ b/public/patterns/01-templates-08-contact/01-templates-08-contact.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1507443444859" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1507443444859" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1508044823612" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1508044823612" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1507443444859" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1507443444859" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1508044823612" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1508044823612" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -496,6 +496,7 @@
       .h5,
       .h6 {
         font-weight: 700;
+        line-height: 1.2;
         margin: 0 0 18px;
       }
 
@@ -5973,10 +5974,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1507443444859">
+  <script id="pl-js-polyfill-insert-1508044823612">
     (function() {
       if (self != top) {
-        var cb = '1507443444859';
+        var cb = '1508044823612';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -5986,10 +5987,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1507443444859">
+  <script id="pl-js-insert-1508044823612">
     (function() {
       if (self != top) {
-        var cb = '1507443444859';
+        var cb = '1508044823612';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
